--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,54 @@
-body{
+/* Обнуление */
+*,
+*::before,
+*::after {
+    padding: 0;
     margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
+}
+
+input {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    background: none;
+    box-shadow: none;
+    font: inherit;
+    color: inherit;
+    line-height: inherit;
+    width: auto;
+}
+
+html,
+body {
+    height: 100%;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
 }
